zakinchutu vid main

--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
                         <td class="logo">
                             <img src="/photo/logo.png" alt="логотип компанії">
                         </td>
-                    </tr>
-                    <tr>
                         <td class="tel">
-
+                            <p><img src="/photo/phone.png" alt="phone"><a href="#">+38(097) 100-25-25</a></p>
+                            <p>контактний телефон у Вашому місті</p>
                         </td>
                     </tr>
                 </table>
@@ -41,32 +40,46 @@
             </td>
             <td width="600">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
-                    <tr >
+                    <tr>
                         <td>
-
+                            <img src="/photo/реклама.jpg" alt="пропозиція місяця">
                         </td>
                     </tr>
                 </table>
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                     <tr>
-                        <td>
-
+                        <td class="info">
+                            <h1>Компанія “Хата Плюс”</h1>
+                            <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж
+                                і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу
+                                заміська нерухомість під містом стала справжньою віддушиною
+                                і порятунком від сумній життя в багатоповерхівках спальних районів.
+                            </p>
+                            <p class="bottom"><a href="#">Детальніше про нас</a></p>
                         </td>
                     </tr>
                 </table>
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                     <tr>
-                        <td>
+                        <td class="mainGrey">
                             <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
-                                    <td>
-
+                                    <td class="main">
+                                        <img src="/photo/розташування.png" alt="значок розташування">
+                                        <h2>Зручне розташування</h2>
+                                        <p>Наші котеджі знаходяться по всій країні</p>
                                     </td>
-                                    <td>
-
+                                    <td class="main">
+                                        <img src="/photo/домік.png" alt="значок ялинка">
+                                        <h2>Широкий вибір</h2>
+                                        <p>Понад 50 видів котеджів
+                                            з усіма зручностями
+                                        </p>
                                     </td>
-                                    <td>
-
+                                    <td class="main">
+                                        <img src="/photo/ялинка.png" alt="значок ялинка">
+                                        <h2>Дика природа</h2>
+                                        <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
                                     </td>
                                 </tr>
                             </table>
@@ -78,15 +91,44 @@
                         <td>
                             <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
-                                    <td>
-
+                                    <td class="photoDom">
+                                        <img src="/photo/montreal.png" alt="montreal">
                                     </td>
-                                    <td>
-
+                                    <td class="dom">
+                                        <h3>MONTREAL (332 м2)</h3>
+                                        <p>Містечко оточене сосновим і листяним лісом, чи не на кожній дільниці сосна,
+                                            береза або клен.</p>
+                                        <p>Загальна площа будови: 290 м2
+                                            Кількість спалень: 3
+                                            Гараж: 2 авто
+                                        </p>
                                     </td>
                                 </tr>
                             </table>
-                        </td> 
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                    <tr>
+                        <td>
+                            <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                                <tr>
+                                    <td class="dom">
+                                        <h3>EDMONTON (338 м2)</h3>
+                                        <p>Тут є все для комфортної життя: вода
+                                            з власної скважини, газова опалення, високошвидкісна Інтернет.
+                                        </p>
+                                        <p>Загальна площа будови: 312 м2
+                                            Кількість спалень: 4
+                                            Гараж: 2 авто
+                                        </p>
+                                    </td>
+                                    <td class="photoDom">
+                                        <img src="/photo/edmonton.png" alt="edmonton">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
                         <hr>
                     </tr>
                 </table>
@@ -95,11 +137,19 @@
                         <td>
                             <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
-                                    <td>
-
+                                    <td class="photoDom">
+                                        <img src="/photo/calgary.png" alt="calgary">
                                     </td>
-                                    <td>
-
+                                    <td class="dom">
+                                        <h3>CALGARY (294 м2)</h3>
+                                        <p>Для діток тут побудована ігровий
+                                            та спортивний майданчик, а недалеко
+                                            від містечка знаходяться дитячий садок.
+                                        </p>
+                                        <p>Загальна площа будови: 272 м2
+                                            Кількість спалень: 3
+                                            Гараж: 2 авто
+                                        </p>
                                     </td>
                                 </tr>
                             </table>
@@ -109,24 +159,12 @@
                 </table>
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                     <tr>
-                        <td>
-                            <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
-                                <tr>
-                                    <td>
-
-                                    </td>
-                                    <td>
-
-                                    </td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
-                    <tr>
-                        <td>
-
+                        <td class="orange">
+                            <h3>Отримай знижку -10%</h3>
+                            <p>Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                                Акція триває в період з 21.04.2018 по 31.10.2018 включно.
+                            </p>
+                            <p><a href="#">Прийняти участь</a></p>
                         </td>
                     </tr>
                 </table>
@@ -140,8 +178,55 @@
             <td class="dark_grey">
 
             </td>
-            <td class="footer" width="600">
+            <td class="icon" width="600">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                    <tr>
+                        <td>
+                            <img src="/photo/twiter.png" alt="twiter">
+                        </td>
+                        <td>
+                            <img src="/photo/facebook.png" alt="facebook">
+                        </td>
+                        <td>
+                            <img src="/photo/wifi.png" alt="wifi">
+                        </td>
+                        <td>
+                            <img src="/photo/pinterest.png" alt="pinterest">
+                        </td>
+                        <td>
+                            <img src="/photo/google.png" alt="google">
+                        </td>
+                        <td>
+                            <img src="/photo/ball.png" alt="ball">
+                        </td>
+                        <td>
+                            <img src="/photo/in.png" alt="in">
+                        </td>
+                        <td>
+                            <img src="/photo/krapka.png" alt="krapka">
+                        </td>
+                    </tr>
+                </table>
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                    <tr>
+                        <td class="iconText">
+                            <p>© Будівельна компанія “Хата Плюс” 2018.</p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+            <td class="dark_grey">
 
+            </td>
+        </tr>
+    </table>
+    <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+        <tr>
+            <td class="dark_grey">
+
+            </td>
+            <td class="footer" width="600">
+                <p><a href="#">Перейти на сайт</a> | <a href="#"> Відписатися</a></p>
             </td>
             <td class="dark_grey">
 
